feat(api): create a route for creating representations
