# appeals/api/src/server/openapi.json
@@ -1825,12 +1825,12 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/CreateSiteVisitResponse"
+									"$ref": "#/components/schemas/SiteVisitSingleResponse"
 								}
 							},
 							"application/xml": {
 								"schema": {
-									"$ref": "#/components/schemas/CreateSiteVisitResponse"
+									"$ref": "#/components/schemas/SiteVisitSingleResponse"
 								}
 							}
 						}
@@ -1849,12 +1849,12 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/CreateSiteVisitRequest"
+								"$ref": "#/components/schemas/SiteVisitCreateRequest"
 							}
 						},
 						"application/xml": {
 							"schema": {
-								"$ref": "#/components/schemas/CreateSiteVisitRequest"
+								"$ref": "#/components/schemas/SiteVisitCreateRequest"
 							}
 						}
 					}
@@ -1898,12 +1898,12 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SingleSiteVisitResponse"
+									"$ref": "#/components/schemas/SiteVisitSingleResponse"
 								}
 							},
 							"application/xml": {
 								"schema": {
-									"$ref": "#/components/schemas/SingleSiteVisitResponse"
+									"$ref": "#/components/schemas/SiteVisitSingleResponse"
 								}
 							}
 						}
@@ -1955,12 +1955,12 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/UpdateSiteVisitResponse"
+									"$ref": "#/components/schemas/SiteVisitUpdateRequest"
 								}
 							},
 							"application/xml": {
 								"schema": {
-									"$ref": "#/components/schemas/UpdateSiteVisitResponse"
+									"$ref": "#/components/schemas/SiteVisitUpdateRequest"
 								}
 							}
 						}
@@ -1982,12 +1982,12 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/UpdateSiteVisitRequest"
+								"$ref": "#/components/schemas/SiteVisitUpdateRequest"
 							}
 						},
 						"application/xml": {
 							"schema": {
-								"$ref": "#/components/schemas/UpdateSiteVisitRequest"
+								"$ref": "#/components/schemas/SiteVisitUpdateRequest"
 							}
 						}
 					}
@@ -3565,6 +3565,67 @@
 				}
 			}
 		},
+		"/appeals/{appealId}/reps": {
+			"post": {
+				"tags": ["Representations"],
+				"description": "Create a representation",
+				"parameters": [
+					{
+						"name": "appealId",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"name": "azureAdUserId",
+						"in": "header",
+						"required": true,
+						"example": "434bff4e-8191-4ce0-9a0a-91e5d6cdd882",
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Create a Representation against an appeal",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/RepResponse"
+								}
+							},
+							"application/xml": {
+								"schema": {
+									"$ref": "#/components/schemas/RepResponse"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad Request"
+					}
+				},
+				"requestBody": {
+					"in": "body",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateRepRequest"
+							}
+						},
+						"application/xml": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateRepRequest"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/appeals/{appealId}/listed-buildings": {
 			"post": {
 				"tags": ["Listed buildings"],
@@ -3876,62 +3937,6 @@
 					}
 				}
 			}
-		},
-		"/appeals/{appealId}/case-notes/{caseNoteId}": {
-			"get": {
-				"tags": ["Case notes"],
-				"description": "Returns a case note for an appeal by id",
-				"parameters": [
-					{
-						"name": "appealId",
-						"in": "path",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"name": "caseNoteId",
-						"in": "path",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					},
-					{
-						"name": "azureAdUserId",
-						"in": "header",
-						"required": true,
-						"example": "434bff4e-8191-4ce0-9a0a-91e5d6cdd882",
-						"schema": {
-							"type": "string"
-						}
-					}
-				],
-				"responses": {
-					"200": {
-						"description": "Returns a comment by caseNoteId",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/GetCaseNoteResponse"
-								}
-							},
-							"application/xml": {
-								"schema": {
-									"$ref": "#/components/schemas/GetCaseNoteResponse"
-								}
-							}
-						}
-					},
-					"400": {
-						"description": "Bad Request"
-					},
-					"404": {
-						"description": "Not Found"
-					}
-				}
-			}
 		}
 	},
 	"components": {
@@ -4030,6 +4035,34 @@
 				},
 				"xml": {
 					"name": "RepStatusUpdateRequest"
+				}
+			},
+			"CreateRepRequest": {
+				"type": "object",
+				"properties": {
+					"representedFirstName": {
+						"type": "string",
+						"example": "Kevin"
+					},
+					"representedLastName": {
+						"type": "string",
+						"example": "Fowler"
+					},
+					"representedEmail": {
+						"type": "string",
+						"example": "kevin.fowler@email.com"
+					},
+					"attachmentId": {
+						"type": "string",
+						"example": "1a14cb3a-35ef-4f93-a597-61010e6b0ad8"
+					},
+					"redactionStatus": {
+						"type": "string",
+						"example": "unredacted"
+					}
+				},
+				"xml": {
+					"name": "CreateRepRequest"
 				}
 			},
 			"RepResponse": {
@@ -4155,7 +4188,7 @@
 						"properties": {
 							"submissionId": {
 								"type": "string",
-								"example": "c38ef972-f6d1-44b6-933b-41437b619062"
+								"example": "7e1ec32e-1ca1-44e7-993f-417f6f00b160"
 							},
 							"advertisedAppeal": {
 								"type": "boolean",
